--- a/public/html/index.html
+++ b/public/html/index.html
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="grid-img img-observation from-right">
-                        <a class="works-link" href="ww.google" aria-label="Img">
+                        <a class="works-link" href="" aria-label="Img">
                         <img class="works__img" src="img/keeper.png" alt="">
                     </a>
                     </div>
@@ -213,7 +213,7 @@
             </h3>
             <h1 class="font-600 mb-2 intersection-observer">Get In Touch</h1>
             <p class="line-2 font-200 mb-2_5 intersection-observer">Although I’m not currently looking for any new opportunities, my inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!</p>
-            <a href="https://google.com" class="say-hello font-200 intersection-observer">Say Hello</a>
+            <a class="say-hello font-200 intersection-observer">Say Hello</a>
         </div>
     </section>    
 </main>
