--- a/public/html/index.html
+++ b/public/html/index.html
@@ -46,7 +46,7 @@
                 <a class="hero-link font-300 clr-black" href="#about-me">Read More</a>
             </div>
             <div class="hero-img">
-                <img class="img__hero" src="img/avatar2.png" alt="">
+                <img class="img__hero" src="/img/avatar2.png" alt="">
             </div>
         </div>
 
@@ -54,7 +54,7 @@
             <h3 class="clr-title intersection-observer mb-3">About Me</h3>
             <div class="about-section flex-row">
                 <div class="img__about intersection-observer">
-                    <img class="about__img" src="img/avatar2.png" alt="" >
+                    <img class="about__img" src="/img/avatar2.png" alt="" >
                 </div>
                 <div class="about-text hero-text intersection-observer">
                     <h3>I started coding nearly at 13. I have build lots of Web Application like Todolist, Sign Page, Blog Post with Mongoose, EJS, Node with Express, JQuery, React</h3>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="grid-img img-observation from-right">
                         <a class="works-link" href="">
-                        <img class="works__img" src="img/keeper.png" alt="">
+                        <img class="works__img" src="/img/keeper.png" alt="">
                     </a>
                     </div>
             </div>
@@ -90,7 +90,7 @@
             <div class="grid mb-3">
                 <div class="grid-img img-observation from-left">
                         <a class="works-link" href="">
-                            <img class="works__img" src="img/oauth.png" alt="">
+                            <img class="works__img" src="/img/oauth.png" alt="">
                         </a>
                     </div>
                 <div class="grid-text width-gridtxt align-right from-right">
@@ -118,7 +118,7 @@
                 </div>
                 <div class="grid-img img-observation from-right">
                         <a class="works-link" href="" aria-label="Img">
-                        <img class="works__img" src="img/keeper.png" alt="">
+                        <img class="works__img" src="/img/keeper.png" alt="">
                     </a>
                     </div>
             </div>
